# swisys

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  manifest.xml
.github/workflows/: release.yml
contrib/aur/: PKGBUILD.template
src/: main.rs
